--- a/homework_03/Dockerfile
+++ b/homework_03/Dockerfile
@@ -1,1 +1,17 @@
-FROM python:3.9-buster
+FROM python:3.11.3-bullseye
+
+ENV PYTHONUMBUFFERED=1
+
+WORKDIR /app
+
+RUN pip install --upgrade pip
+RUN pip install "poetry==1.4.2"
+RUN poetry config virtualenvs.create false --local
+COPY pyproject.toml poetry.lock ./
+RUN poetry install --no-ansi --only main
+
+COPY main.py .
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+EXPOSE 8000
