--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ app==0.0.1
 async-timeout==4.0.2
 asyncpg==0.27.0
 attrs==23.1.0
+blinker==1.6.2
 build==0.10.0
 CacheControl==0.12.11
 certifi==2022.12.7
@@ -22,6 +23,7 @@ exceptiongroup==1.1.1
 Faker==13.15.0
 fastapi==0.95.1
 filelock==3.12.0
+Flask==2.3.2
 frozenlist==1.3.3
 greenlet==2.0.2
 h11==0.14.0
@@ -30,11 +32,14 @@ idna==3.4
 importlib-metadata==6.6.0
 iniconfig==2.0.0
 installer==0.7.0
+itsdangerous==2.1.2
 jaraco.classes==3.2.3
 jeepney==0.8.0
+Jinja2==3.1.2
 jsonschema==4.17.3
 keyring==23.13.1
 lockfile==0.12.2
+MarkupSafe==2.1.3
 more-itertools==9.1.0
 msgpack==1.0.5
 multidict==6.0.4
@@ -61,6 +66,7 @@ requests-toolbelt==0.10.1
 router==0.1
 SecretStorage==3.3.3
 shellingham==1.5.0.post1
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.15
 starlette==0.26.1
@@ -75,5 +81,6 @@ uvicorn==0.22.0
 virtualenv==20.21.1
 webencodings==0.5.1
 websocket-client==1.5.1
+Werkzeug==2.3.4
 yarl==1.9.2
 zipp==3.15.0
