--- a/homework_06/docker-compose.yaml
+++ b/homework_06/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build:
       dockerfile: ./Dockerfile
       context: ./
+    environment:
+      CONFIG_CLASS: ProductionConfig
     ports:
       - "8080:80"
     env_file:
