--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,31 +1,31 @@
-## This workflow will install Python dependencies, run tests and lint with a single version of Python
-## For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-#
-#name: Run tests
-#
-#on: [push]
-#
-#permissions:
-#  contents: read
-#
-#jobs:
-#  build:
-#
-#    runs-on: ubuntu-latest
-#    strategy:
-#        matrix:
-#          python-version: [ "3.8", "3.9", "3.10" ]
-#    steps:
-#    - uses: actions/checkout@v3
-#    - name: Set up Python ${{ matrix.python-version }}
-#      uses: actions/setup-python@v3
-#      with:
-#        python-version: ${{ matrix.python-version }}
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install pytest
-#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#    - name: Test with pytest
-#      run: |
-#        pytest
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+
+name: Run tests
+
+on: [push]
+
+permissions:
+  contents: read
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    strategy:
+        matrix:
+          python-version: [ "3.8", "3.9", "3.10" ]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Test with pytest
+      run: |
+        pytest
