--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = sales_shop.settings
+pythonpath = ../homework_09
 filterwarnings = ignore
 python_files = test_register.py tests.py
